Fixing nil issues from template rendering and fixed feed title overflow in CSS.

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -99,6 +99,9 @@ body#home_pages
     margin-right: 10px
     font-size: 14px
     margin-top: -1px
+  .entry-feed-name
+    white-space: nowrap
+    overflow: hidden
   .entry-main
     //See: http://quirksmode.org/css/user-interface/textoverflow.html
     text-overflow: ellipsis
